# learn-llvm

./: .gitignore  README.en.md  README.md  extend.md  readme.en.md  readme.md
llvm3.0/example/chapter-000-base/000-project-template/: readme.md
llvm3.0/example/chapter-001-learn-ir/000-create-global-variables/: CMakeLists.txt  main.cpp
llvm3.0/preparation/: docker-use-zh.md
llvm3/example/chapter-000-base/000-project-template/: CMakeLists.txt  main.cpp
llvm3/preparation/: cmake-tutorial-zh.md
